# earthkit-data-wekeo-source

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: release.yml
earthkit_data_wekeo_source/: __init__.py  version.py  wekeo.py
tests/: test_basic.py  test_source.py
