[metadata]
name = earthkit-data-wekeo-source
license = MIT License
description = WEkEO external source plugin
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
long_description_content_type=text/markdown
long_description = file: README.md
test_suite = tests

[options]
# packages = find_namespace:
install_requires =
    pyyaml
    earthkit-data
    hda

[options.entry_points]
earthkit.data.sources =
    wekeo-source = earthkit_data_wekeo_source:WekeoSource

[options.extras_require]
test =
    pytest
    pytest-cov


[flake8]
max-line-length = 110
extend-ignore = E203, W503

[mypy]
strict = False
ignore_missing_imports = True
